--- a/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
+++ b/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
@@ -46,7 +46,7 @@
                 >
             </ListBox>
             <StackPanel Grid.Row="2">
-                <CheckBox
+                <ui:ToggleSwitch
                     Name="Headers"
                     Content="First Row Contains Headers"
                     IsChecked="True"
