--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -72,7 +72,7 @@
                 <TextBlock Text="Country" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
                 <TextBox Name="CountryBox" FontSize="16" Margin="0,5,15,5" Width="180" KeyDown="Box_KeyDown"/>
                 <TextBlock Text="Private" FontSize="16" Margin="0,0,5,0" Width="70" VerticalAlignment="Center"/>
-                <CheckBox Name="AnonymousBox" Margin="0,5,15,5" VerticalContentAlignment="Center"/>
+                <ui:ToggleSwitch Name="AnonymousBox" Margin="0,5,15,5" VerticalContentAlignment="Center"/>
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Email" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
