--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -104,7 +104,7 @@
                     </ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <CheckBox
+                    <ui:ToggleSwitch
                         Content="Play Sound on Read?"
                         VerticalContentAlignment="Center"
                         x:Name="soundBox"
