Modified how ReaderMessages are stored. Created a window for displaying reader messages. Updated the UI to actually work when dealing with reader messages on the timing page. Added the ability to classify reader messages as having been received (DialogBox shown if high severity, otherwise marked as seen if the message display window is shown)

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -577,7 +577,16 @@
                         <ui:Button
                             x:Name="ReaderMessageButton"
                             Click="ReaderMessageButton_Click"
-                            Visibility="Collapsed"
+                            Visibility="Hidden"
+                            DockPanel.Dock="Right"
+                            BorderBrush="Transparent"
+                            BorderThickness="0"
+                            Background="Transparent"
+                            MouseOverBackground="Transparent"
+                            PressedBackground="Transparent"
+                            Width="Auto"
+                            Margin="0,0,10,0"
+                            Padding="0"
                             >
                             <ui:InfoBadge 
                                 x:Name="ReaderMessageNumberBox"
