Timing system notifications are no longer able to be selected on the display window. Added some fields to the ReaderMessage class to allow for more information to be stored / shared. ReaderMessage is now Comparable to allow it to be sorted by the time they were received (or told the error happened). Modified Chronokeepinterface to allow it to pass the reader name when displaying an error message. Changed severity of the info badge from Caution to Attention. Added info badge to timing tab when the timing page isn't selected and there are message the user hasn't seen. Info badge on timing page will always be shown if there are messages that the user has received. The number shown reflects the number of messages the user hasn't viewed. Modified MinWindow to match MainWindow with regards to the notification message changes. Fixed an issue where High severity notifications wouldn't show due to a return instead of a break when setting the severity. Fixed an issue where the user could be notified about the same message multiple times if a second UpdateTimingNonBlocking calls were made before the user dismissed the old DialogBox.

--- a/ChronoKeep/App.xaml
+++ b/ChronoKeep/App.xaml
@@ -11,6 +11,29 @@
                 <ui:ThemesDictionary Theme="Dark"/>
                 <ui:ControlsDictionary />
             </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="ListViewItem" x:Key="NoFocusNotification">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Border Margin="1" BorderBrush="#88A6A6A6" BorderThickness="1,1,1,1">
+                                <Grid Background="{Binding Background}">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="150" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="80" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="8,4" Text="{Binding When}" VerticalAlignment="Center" TextAlignment="Center" />
+                                    <TextBlock Grid.Column="1" Margin="8,4" Text="{Binding Who}" TextWrapping="Wrap" VerticalAlignment="Center" TextAlignment="Center"/>
+                                    <TextBlock Grid.Column="2" Margin="8,4" Text="{Binding Where}" TextWrapping="Wrap" VerticalAlignment="Center" TextAlignment="Center"/>
+                                    <TextBlock Grid.Column="3" Margin="8,4" Text="{Binding Information}" TextWrapping="Wrap" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <Style TargetType="ListViewItem" x:Key="NoFocusListViewItem">
                 <Setter Property="Focusable" Value="False" />
                 <Setter Property="Template">
