--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -50,103 +50,80 @@
                     Content="Dashboard"
                     Click="DashboardButton_Click"
                     x:Name="dashboardButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Home24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Home24"
+                    />
                 <ui:NavigationViewItem
-                    Content="Timing"
                     Click="TimingButton_Click"
                     x:Name="timingButton"
+                    Icon="ClipboardClock24"
+                    Content="Timing"
                     >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="ClipboardClock24" />
-                    </ui:NavigationViewItem.Icon>
+                    <ui:NavigationViewItem.InfoBadge>
+                        <ui:InfoBadge
+                            x:Name="TimingButtonInfoBadge"
+                            Margin="0,0,10,0"
+                            Severity="Attention"
+                            Value="0"
+                            Visibility="Collapsed"
+                            />
+                    </ui:NavigationViewItem.InfoBadge>
                 </ui:NavigationViewItem>
                 <ui:NavigationViewItem
                     Content="Announcer"
                     Click="Announcer_Click"
                     x:Name="announcerButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="AlertUrgent24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="AlertUrgent24"
+                    />
                 <ui:NavigationViewItem
                     Content="Participants"
                     Click="ParticipantsButton_Click"
                     x:Name="participantsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Person24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Person24"
+                    />
                 <ui:NavigationViewItem
                     Content="Chips"
                     Click="ChipsButton_Click"
                     x:Name="chipsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="DeveloperBoard24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="DeveloperBoard24"
+                    />
                 <ui:NavigationViewItem
                     Content="Locations"
                     Click="LocationsButton_Click"
                     x:Name="locationsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Map24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Map24"
+                    />
                 <ui:NavigationViewItem
                     Content="Distances"
                     Click="DistancesButton_Click"
                     x:Name="distancesButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Ruler24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Ruler24"
+                    />
                 <ui:NavigationViewItem
                     Content="Segments"
                     Click="SegmentsButton_Click"
                     x:Name="segmentsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Organization24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Organization24"
+                    />
                 <ui:NavigationViewItem
                     Content="Age Groups"
                     Click="AgegroupsButton_Click"
                     x:Name="agegroupsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Trophy24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Trophy24"
+                    />
             </ui:NavigationView.MenuItems>
             <ui:NavigationView.FooterMenuItems>
                 <ui:NavigationViewItem
                     Content="Settings"
                     Click="SettingsButton_Click"
                     x:Name="settingsButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="Settings24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="Settings24"
+                    />
                 <ui:NavigationViewItem
                     Content="About"
                     Click="AboutButton_Click"
                     x:Name="aboutButton"
-                    >
-                    <ui:NavigationViewItem.Icon>
-                        <ui:SymbolIcon Symbol="QuestionCircle24" />
-                    </ui:NavigationViewItem.Icon>
-                </ui:NavigationViewItem>
+                    Icon="QuestionCircle24"
+                    />
             </ui:NavigationView.FooterMenuItems>
         </ui:NavigationView>
         <Grid 
