Added templates and styling for changelog window. Added code to ensure the changelog window is properly scrollable and the child listviews don't steal the mousewheel. Modified csproj file to automatically copy all changelog files to the output directory as well as removed a bunch of extraneous codes of line by using wildcard expansion for help documents, HtmlTemplates files, and sound files. Added changelog entry class to deal with changelog entries. Added setting to keep track of the last version of the program that was opened previously to allow us to automatically show the changelog when the program is updated. Added setting to allow the user to verify that they want to see the changelog after updating. Navigation icon change stopped working and thus was reverted back to the working state.

--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -35,7 +35,17 @@
             Padding="20,10"
             VerticalAlignment="Top"
             Margin="0,5,0,5"
+            Width="160"
             Click="VersionLabel_Click"
+            />
+        <Button
+            Name="Changelog"
+            Content="View Changelog"
+            Padding="20,10"
+            VerticalAlignment="Top"
+            Margin="0,5,0,5"
+            Width="160"
+            Click="Changelog_Click"
             />
         <TextBlock
             Margin="0,20,0,8"
