--- a/ChronoKeep/App.xaml
+++ b/ChronoKeep/App.xaml
@@ -34,6 +34,65 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style TargetType="ListViewItem" x:Key="NoFocusLogEntry">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Border Margin="1" BorderBrush="#88A6A6A6" BorderThickness="1,1,1,1">
+                                <ui:CardExpander
+                                    FontSize="24"
+                                    IsExpanded="{Binding IsExpanded}"
+                                    ExpandDirection="Down"
+                                    >
+                                    <ui:CardExpander.Header>
+                                        <TextBlock Text="{Binding Version}" HorizontalAlignment="Center"/>
+                                    </ui:CardExpander.Header>
+                                    <StackPanel>
+                                        <StackPanel Visibility="{Binding ChangesVisibility}">
+                                            <TextBlock Text="Changes" FontSize="24" HorizontalAlignment="Center" Margin="0,-10,0,10"/>
+                                            <ListView
+                                                ItemsSource="{Binding ChangesList}"
+                                                ItemContainerStyle="{DynamicResource NoFocusLogLine}"
+                                                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                                PreviewMouseWheel="HandlePreviewMouseWheel"
+                                                />
+                                        </StackPanel>
+                                        <StackPanel Visibility="{Binding FixesVisibility}">
+                                            <TextBlock Text="Fixes" FontSize="24" HorizontalAlignment="Center" Margin="0,8,0,10"/>
+                                            <ListView
+                                                ItemsSource="{Binding FixesList}"
+                                                ItemContainerStyle="{DynamicResource NoFocusLogLine}"
+                                                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                                PreviewMouseWheel="HandlePreviewMouseWheel"
+                                                />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </ui:CardExpander>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style TargetType="ListViewItem" x:Key="NoFocusLogLine">
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Border BorderBrush="#88A6A6A6" BorderThickness="0,1,0,0" Margin="0,0,0,2">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" FontSize="16" Text="•" TextWrapping="Wrap" VerticalAlignment="Top" TextAlignment="Right" Margin="0,0,5,0"/>
+                                    <TextBlock Grid.Column="1" FontSize="16" Text="{Binding}" TextWrapping="Wrap" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <Style TargetType="ListViewItem" x:Key="NoFocusListViewItem">
                 <Setter Property="Focusable" Value="False" />
                 <Setter Property="Template">
