--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -183,6 +183,7 @@
                 <ui:ToggleSwitch Name="UpdatePage" Content="Auto-save changes" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
                 <ui:ToggleSwitch Name="ExitNoPrompt" Content="Do not prompt before exit" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
                 <ui:ToggleSwitch Name="CheckUpdates" Content="Check for updates" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
+                <ui:ToggleSwitch Name="AutoChangelog" Content="Show changelog after update" FontSize="14" Margin="10,10,10,10" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
             </StackPanel>
         </Grid>
     </Grid>
